# create2deploy

./: Cargo.toml  LICENSE  README.md  meta.json
src/: main.rs
