[package]
name = "create2deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "=0.5.4", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "eips",
] }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
serde_json = "1.0"